--- a/config/base.xcconfig
+++ b/config/base.xcconfig
@@ -1,7 +1,7 @@
 // docs: https://help.apple.com/xcode/mac/11.4/#/itcaec37c2a6
 
 PRODUCT_NAME = AltTab
-PRODUCT_BUNDLE_IDENTIFIER = com.lwouis.alt-tab-macos
+PRODUCT_BUNDLE_IDENTIFIER = com.steventheworker.alt-tab-macos
 MACOSX_DEPLOYMENT_TARGET = 10.12
 SWIFT_VERSION = 5.0
 INFOPLIST_FILE = Info.plist
