--- a/Info.plist
+++ b/Info.plist
@@ -23,9 +23,9 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>#VERSION#</string>
+	<string>2.00.0</string>
 	<key>CFBundleVersion</key>
-	<string>#VERSION#</string>
+	<string>2.00.0</string>
 	<key>FeedbackToken</key>
 	<string>#FEEDBACK_TOKEN#</string>
 	<key>LSApplicationCategoryType</key>
