--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "husky": "^3.0.4",
     "marked": "^9.0.3",
     "semantic-release": "^22.0.5"
+  },
+  "release": {
+    "branches": ["scriptable"]
   }
 }
