feat(core): fix travis (7)
travis & semantic-release use scriptable branch (opposed to master)

--- a/package.json
+++ b/package.json
@@ -21,6 +21,12 @@
     "semantic-release": "^22.0.5"
   },
   "release": {
-    "branches": ["scriptable"]
+    "branches": ["scriptable"],
+    "plugins": [
+      "@semantic-release/commit-analyzer",
+      "@semantic-release/release-notes-generator",
+      "@semantic-release/changelog",
+      "@semantic-release/git"
+    ]
   }
 }
