feat(core): fix travis (fix semantic-release) (8)
travis & semantic-release use scriptable branch (opposed to master)

--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/steventheworker/alt-tab-macos.git"
+  },
   "private": true,
   "name": "alt-tab-macos",
   "version": "1.0.0",
