feat(core): add openssl (with brew)

--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,7 @@ deploy:
     repo: steventheworker/alt-tab-macos
 after_deploy: scripts/update_homebrew_cask.sh
 before_install:
-  - sudo apt-get update
-  - sudo apt-get install openssl
+  - brew update
+  - brew install openssl
   - openssl aes-256-cbc -K $encrypted_9d3155e86c77_key -iv $encrypted_9d3155e86c77_iv -in AppleDevCert.p12.enc -out ~/.ssh/keychain\ copies/AppleDevCert.p12 -d
   - openssl aes-256-cbc -K $encrypted_b749442190b9_key -iv $encrypted_b749442190b9_iv -in ed25519_sparkle_account_private_key.enc -out ~/.ssh/keychain\ copies/ed25519_sparkle_account_private_key -d
