--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,7 @@ deploy:
     repo: steventheworker/alt-tab-macos
 after_deploy: scripts/update_homebrew_cask.sh
 before_install:
+  - mkdir -p ~/.ssh/keychain\ copies/
   - brew update
   - brew install openssl
   - openssl aes-256-cbc -K $encrypted_9d3155e86c77_key -iv $encrypted_9d3155e86c77_iv -in AppleDevCert.p12.enc -out ~/.ssh/keychain\ copies/AppleDevCert.p12 -d
